# iWEBIFY

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  run_evals.py
evals/: dataset.json
frontend/: index.html
src/: __init__.py  config.py  llm.py  main.py  utils.py
src/api/: routes.py  run_store.py
src/evaluation/: runner.py
src/evaluation/prompts/: edge_cases.json  real.json
src/execution/: db_builder.py  preview_builder.py
src/pipeline/: graph.py  state.py
src/pipeline/nodes/: execution.py  intent_extraction.py  repair.py  schema_generation.py  system_design.py  validation.py
src/schemas/: __init__.py  api.py  auth.py  business.py  database.py  design.py  intent.py  ui.py
src/validation/: cross_layer.py  errors.py
