[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iwebify"
version = "1.0.0"
description = "AI-powered compiler for software generation — natural language to validated, executable applications"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Shaurya"}]

dependencies = [
    # Pipeline orchestration
    "langgraph>=0.2.0",
    
    # LLM
    "openai>=1.50.0",
    
    # Schema contracts
    "pydantic>=2.7.0",
    "pydantic-settings>=2.0.0",
    
    # Backend
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.0.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
